[FIX] participant and meeting service 문법 수정